# magicpin-ai-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION-PLAN.md  README.md  architecture.excalidraw  bot.py  challenge-brief.md  classifiers.py  design-decisions.md  fly.toml  holdout_outputs.jsonl  llm_client.py  make_submission.py  obs.py  pyproject.toml  server.py  state.py  submission.jsonl  validator.py
.claude/skills/architecture-diagram/assets/: template.html
dataset/: holdout_pairs.json  test_pairs.json
prompts/: __init__.py  evidence.py  playbooks.py  skeletons.py  templates.py
scripts/: compose_one.py  judge_provider_overrides.py  run_judge.py  smoke_integration.py  smoke_llm.py  test_classifiers.py  test_state_policy.py  test_tick_reservations.py  test_validator.py
